--- a/sprt-admin/src/test/resources/application.properties
+++ b/sprt-admin/src/test/resources/application.properties
@@ -21,3 +21,15 @@ recaptcha.secretkey=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
 
 # CrossOrigin
 restcontroller.crossorigin.origins=http://localhost:4200
+
+# Mail
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+sprt.mail.from=info@sportologic.cz
