SprtAdmin, confirmation emails post new instance created

--- a/sprt-admin/src/test/resources/application.properties
+++ b/sprt-admin/src/test/resources/application.properties
@@ -33,3 +33,10 @@ spring.mail.properties.mail.smtp.ssl.trust=*
 spring.mail.properties.mail.smtp.ssl.enable=true
 
 sprt.mail.from=info@sportologic.cz
+
+# Company name
+company.name=Sportologic s.r.o.
+company.name.short=Sportologic
+company.contact.phone=+420 604 001 002
+company.contact.email=info@sportologic.cz
+company.admin.email=info@sportologic.cz
