--- a/sprt-admin/src/main/resources/application-sample.properties
+++ b/sprt-admin/src/main/resources/application-sample.properties
@@ -55,3 +55,10 @@ spring.mail.properties.mail.smtp.ssl.trust=*
 spring.mail.properties.mail.smtp.ssl.enable=true
 
 sprt.mail.from=info@sportologic.cz
+
+# Company name
+company.name=Sportologic s.r.o.
+company.name.short=Sportologic
+company.contact.phone=+420 602 001 002
+company.contact.email=info@sportologic.cz
+company.admin.email=info@sportologic.cz
