--- a/scb-ui-zk/pom.xml
+++ b/scb-ui-zk/pom.xml
@@ -18,6 +18,7 @@
 <!-- 		<zk.version>8.6.0</zk.version> -->
 		<warPluginVersion>2.6</warPluginVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<org.thymeleaf-version>3.0.11.RELEASE</org.thymeleaf-version>
 	</properties>
 
 	<dependencies>
@@ -196,6 +197,18 @@
 		    <artifactId>slf4j-api</artifactId>
 		</dependency>
 		
+		<!-- thymeleaf dependencies -->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>${org.thymeleaf-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring4</artifactId>
+            <version>${org.thymeleaf-version}</version>
+        </dependency>
+        
 	</dependencies>
 
 	<build>
