QRCodePayment, template for payment instruction

--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -10,8 +10,8 @@ msg.validation.warn.courseApplDynAttrWithSameNameExists=Dynamický atribut se jm
 msg.validation.warn.courseApplDynAttrIsUsed=Dynamický atribut nelze odstranit, je použit na přihlášce.
 
 # mail s platebními instrukcemi
-msg.ui.mail.paymentInstruction.subject.twoSemester=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
-msg.ui.mail.paymentInstruction.subject.standard=Platba za kurz "{0}", ročník {1}, účastník {2}
+msg.ui.mail.paymentInstruction.subject.twoSemester=Instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
+msg.ui.mail.paymentInstruction.subject.standard=Instrukce k platbě za kurz "{0}", ročník {1}, účastník {2}
 msg.ui.mail.paymentInstruction.subject=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
 msg.ui.mail.paymentInstruction.text0=Dobrý den,
 msg.ui.mail.paymentInstruction.text1.twoSemester=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
