--- a/scb-pom/pom.xml
+++ b/scb-pom/pom.xml
@@ -27,6 +27,7 @@
 		<application.version>0.0.1-SNAPSHOT</application.version>
 		<log4j.version>2.17.1</log4j.version>
 		<slf4j.version>2.0.0-alpha1</slf4j.version>
+		<org.thymeleaf-version>3.0.11.RELEASE</org.thymeleaf-version>
 	</properties>
 
 	<dependencyManagement>
