PaymentConfirmation, generating of report from payment list page

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -260,6 +260,13 @@ txt.ui.common.FileConfig=Konfigurace souboru na přihlášce
 txt.ui.common.File=Soubor
 txt.ui.common.ChangeFile=Změnit soubor
 txt.ui.common.OtherDocumentsToDownload=Další dokumenty ke stažení
+txt.ui.common.PaymentConfirm=Potvrzení o platbě
+txt.ui.common.PaymentConfirmSendToReprDesc=Na email zákonného zástupce {0}.
+
+txt.ui.paymentConfirmReport.title=Potvrzení o zaplacení ččššěěřřýýááíííúúůů
+txt.ui.paymentConfirmReport.IdentificationNo=IČ: {0}
+txt.ui.paymentConfirmReport.Birthdate=Datum nar. {0}
+txt.ui.paymentConfirmReport.CoursePaymentInfo=Úhrada členského příspěvku za {0}, ročník {1}.
 
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
 txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
@@ -526,3 +533,7 @@ enum.CourseApplicationFileType.HEALTH_INFO=Zdravotní způsobilost
 enum.CourseApplicationFileType.HEALTH_EXAM=Zdravotní prohlídka
 enum.CourseApplicationFileType.CLUB_RULES=Pravidla klubu
 enum.CourseApplicationFileType.OTHER=Jiný
+
+enum.ComboVals.VAL_1=Hodnota 1
+enum.ComboVals.VAL_2=Hodnota 2
+enum.ComboVals.VAL_3=Hodnota 3
