PaymentConfirmation, add last payment date to and restriction of report creation

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -263,10 +263,11 @@ txt.ui.common.OtherDocumentsToDownload=Další dokumenty ke stažení
 txt.ui.common.PaymentConfirm=Potvrzení o platbě
 txt.ui.common.PaymentConfirmSendToReprDesc=Na email zákonného zástupce {0}.
 
-txt.ui.paymentConfirmReport.title=Potvrzení o zaplacení ččššěěřřýýááíííúúůů
+txt.ui.paymentConfirmReport.title=Potvrzení o zaplacení
 txt.ui.paymentConfirmReport.IdentificationNo=IČ: {0}
 txt.ui.paymentConfirmReport.Birthdate=Datum nar. {0}
 txt.ui.paymentConfirmReport.CoursePaymentInfo=Úhrada členského příspěvku za {0}, ročník {1}.
+txt.ui.paymentConfirmReport.allowedCoursePayed=Povoleno jen pokud bylo celkově uhrazeno.
 
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
 txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
