QRCodePayment, mail payment confirmation content

--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -19,6 +19,8 @@ msg.ui.mail.paymentInstruction.text1.standard=níže zasíláme instrukce k plat
 msg.ui.mail.paymentInstruction.text2=Platbu prosím pošlete nejpozději do {0}.
 msg.ui.mail.paymentInstruction.text4=Pokud již byla platba uhrazena, berte prosím tuto zprávu jako bezpředmětnou.
 msg.ui.mail.paymentInstruction.text5=ZKONTROLUJTE PROSÍM SPRÁVNOST VARIABILNÍHO SYMBOLU, který uvádíte v příkazu k úhradě. V případě chybného zadání nemůže být Vaše platba identifikována. NEPLAŤTE VÍCE ÚHRAD POD JEDNÍM VARIABILNÍM SYMBOLEM, platba pak nemůže být identifikována.
+# mail potvrzeni o platbe
+msg.ui.mail.paymentConfirmation.subject=Potvrzení o platbě
 
 txt.ui.common.AccountNo=Číslo účtu
 txt.ui.common.Amount=Částka
