--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -409,6 +409,8 @@ msg.ui.info.usernameChanged=Uživatelské jméno změněno na "{0}", odeslán no
 msg.ui.info.usernameChange.postActionMsg=Po uložení bude provedeno odhlášení a bude Vám odeslán email s přihlašovacími údaji.
 msg.ui.info.fileConfigStored=Nastavení souboru bylo uloženo.
 msg.ui.warn.fileIsRequired=Potřeba nahrát soubor.
+msg.ui.info.paymentConfirmSent=Potvrzení o platbě bylo odesláno na adresu {0}.
+
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
