--- a/scb-data-service/src/main/resources/mail/MailMessages.properties
+++ b/scb-data-service/src/main/resources/mail/MailMessages.properties
@@ -1,14 +1,21 @@
 greeting=Hello, {0} (in no specific language)!
+# commom
+msg.ui.mail.paymentInstruction.greeting=Dobrý den,
+msg.ui.mail.Regards=S pozdravem
 
-msg.ui.mail.paymentInstruction.text0=Dobrý den,
+# Payment instruction
 msg.ui.mail.paymentInstruction.text1.twoSemester=zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
 msg.ui.mail.paymentInstruction.text1.standard=zasíláme instrukce k platbě za kurz "{0}", ročník {1}, účastník {2}.
 msg.ui.mail.paymentInstruction.text4=Pokud již byla platba uhrazena, berte prosím tuto zprávu jako bezpředmětnou.
 msg.ui.mail.paymentInstruction.text5=ZKONTROLUJTE PROSÍM SPRÁVNOST VARIABILNÍHO SYMBOLU, který uvádíte v příkazu k úhradě. V případě chybného zadání nemůže být Vaše platba identifikována. NEPLAŤTE VÍCE ÚHRAD POD JEDNÍM VARIABILNÍM SYMBOLEM, platba pak nemůže být identifikována.
-msg.ui.mail.Regards=S pozdravem
 txt.ui.common.AccountNo=Číslo účtu
 txt.ui.common.Amount=Částka
 txt.ui.common.amount.CZK={0} Kč
 txt.ui.common.VarSymbol=Variabilní symbol
 txt.ui.common.MessageToReceipent=Zpráva pro příjemce
 txt.ui.common.DueDate=Datum splatnosti
+
+# Payment confirmation
+msg.ui.mail.paymentConfirmation.text0=Dobrý den,
+msg.ui.mail.paymentConfirmation.text1.twoSemester=zasíláme potvrzení o platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
+msg.ui.mail.paymentConfirmation.text1.standard=zasíláme potvrzení o platbě za kurz "{0}", ročník {1}, účastník {2}.
