Payment confirmation for two semester course

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -262,6 +262,8 @@ txt.ui.common.ChangeFile=Změnit soubor
 txt.ui.common.OtherDocumentsToDownload=Další dokumenty ke stažení
 txt.ui.common.PaymentConfirm=Potvrzení o platbě
 txt.ui.common.PaymentConfirmSendToReprDesc=Na email zákonného zástupce {0}.
+txt.ui.common.firstSemester=I. pololetí
+txt.ui.common.secondSemester=II. pololetí
 
 txt.ui.paymentConfirmReport.title=Potvrzení o zaplacení
 txt.ui.paymentConfirmReport.IdentificationNo=IČ: {0}
