--- a/scb-ui-zk/pom.xml
+++ b/scb-ui-zk/pom.xml
@@ -134,6 +134,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-fonts</artifactId>
+		    <version>5.6.1</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
